--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -8,46 +8,46 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "c / BIO"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Liu Fenglin"
+name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://liufl666.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "liufl666/liufl666.github.io"
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Img3964.jpg"
-  name             : "Liu Fenglin"
-  pronouns         : "he/him" # example: "she/her"  
+  avatar           : "profile.png"
+  name             : "Your Sidebar Name"
+  pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Shenzhen"
-  employer         : "Shenzhen University"
+  location         : "Earth"
+  employer         : "Red Brick University"
   uri              : # URL
-  email            : "liufenglin2022@email.szu.edu.cn" 
+  email            : "none@example.org" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : # "http://orcid.org/yourorcidurl"
-  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  orcid            : "http://orcid.org/yourorcidurl"
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "liufl666"
-  kaggle           : "ferruccioliu"  
+  github           : "academicpages"
+  kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : # "bsky.app" # Replace this with you Bluesky username
+  bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -61,10 +61,10 @@ author:
   medium           : # URL
   pinterest        : # Username
   soundcloud       : # Username
-  steam            : "gpyinlong"
+  steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "GPYINLONG"  # Replace this with your X / Twitter handle
+  twitter          : "UniofOxford"  # Replace this with your X / Twitter handle
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
