--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   medium           : # URL
   pinterest        : # Username
   soundcloud       : # Username
-  steam            : "76561198319298541"
+  steam            : # "76561198319298541"
   telegram         : # URL
   tumblr           : # Username
   twitter          : "GPYINLONG"  # Replace this with your X / Twitter handle
